tests/baselines/reference/bigintAmbientMinimal(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
/main.ts(5,17): error TS2737: BigInt literals are not available when targeting lower than ES2020.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== /ambient.d.ts (0 errors) ====
    declare const fromDts = 789n;
    declare namespace Lib {
        const value = 999n;
    }
    
==== /main.ts (1 errors) ====
    // Minimal repro from issue
    declare const n = 123n;
    
    // Non-ambient for comparison
    const regular = 456n;
                    ~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.